[tool.poetry]
name = "multitooner"
version = "0.1.0"
description = "An easier way to manage and launch sessions for multiple toons for Toontown Rewritten."
authors = ["Jake Brehm <mail@jakebrehm.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
