[tool.poetry]
name = "tooner"
version = "1.0.5"
description = "An easier way to manage and launch sessions for Toontown Rewritten."
authors = ["Jake Brehm <mail@jakebrehm.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
